tests/typecheck/fail/undefined_type.tw
// Test undefined type error

fn use_missing(x: MissingType) Int {
    0
}

